<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_title_connection_success_notifications">
    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_connection_success"
        android:title="@string/pref_title_connection_success_notifications"
        android:summary="@string/pref_description_connection_success_notifications" />

    <!-- Allows the user to choose a ringtone in the 'connection success notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_connection_success"
        android:key="notifications_connection_success_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_connection_success"
        android:key="notifications_connection_success_vibrate"
        android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_connection_failure_notifications">
        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_connection_failure"
            android:title="@string/pref_title_connection_failure_notifications"
            android:summary="@string/pref_description_connection_failure_notifications" />

        <!-- Allows the user to choose a ringtone in the 'connection failure notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_connection_failure"
            android:key="notifications_connection_failure_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_connection_failure"
            android:key="notifications_connection_failure_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

</PreferenceScreen>
