<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_remote_devices"
        android:orderInCategory="50"
        android:title="@string/action_remote_devices"
        android:icon="@drawable/ic_remote_devices_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_console"
        android:orderInCategory="90"
        android:title="@string/action_console"
        android:icon="@drawable/ic_console_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never" />
</menu>